Tests and logging have been created